--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ graph TB
             </div>
         </div>
 
-        <h2>Outbound Blast (SMS Campaign) Architecture</h2>
+        <h2>Transfer/Restart (Lateral) Architecture</h2>
         <div class="diagram-wrapper">
             <div class="mermaid">
 graph TB
